--- a/week3/myapp/package.json
+++ b/week3/myapp/package.json
@@ -4,11 +4,13 @@
   "description": "This is a precursor to the creation of express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Billy Ti",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "start": "^5.1.0"
   }
 }
