--- a/week4_Assignment5/my-app/package.json
+++ b/week4_Assignment5/my-app/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d week4_Assignment5/my-app/public"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
